Fixing outline on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,14 @@
   cursor: pointer;
 }
 
+/* trying to fix outline */
+@media (max-width: 500px) {
+  .hero-btn {
+    outline: none;
+    border: 1px dashed var(--black-bg);
+  }
+}
+
 .hero-btn:hover {
   outline-offset: 0px;
   box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px;
